tests/baselines/reference/variableDeclarationInStrictMode1.errors.txt
variableDeclarationInStrictMode1.ts(2,5): error TS1100: Invalid use of 'eval' in strict mode.
variableDeclarationInStrictMode1.ts(2,5): error TS2300: Duplicate identifier 'eval'.
lib.es5.d.ts(--,--): error TS2300: Duplicate identifier 'eval'.


==== variableDeclarationInStrictMode1.ts (2 errors) ====
    "use strict";
    var eval;
        ~~~~
!!! error TS1100: Invalid use of 'eval' in strict mode.
        ~~~~
!!! error TS2300: Duplicate identifier 'eval'.
!!! related TS6203 lib.es5.d.ts:--:--: 'eval' was also declared here.